[package]
name = "reth-erc20-rocket"
version = "1.0.6"
description = "Graph Token Substream Powered Subgraph"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
num-bigint = "0.4"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-database-change = "1.2"
substreams-entity-change = "1.3"
substreams-ethereum = "0.9"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"